Fixed most of the printing errors and the over-lapping of the headers with the previous table of elements.  It now seems to work well.
ToDo: It'd be good to cause the form to go up some when printing.  The page margin at the top of the page is too much.

--- a/HeatSheet/css/cert.css
+++ b/HeatSheet/css/cert.css
@@ -1,5 +1,5 @@
 @media all {
- 
+
     .topln {
         height: 2px;
         color: #AAAAAA;
@@ -18,6 +18,9 @@
         text-decoration: underline;
         font-weight: bold;
         font-size: larger;
+        min-width: 500px;
+        width: 100%;
+       
     }
 
 
@@ -34,6 +37,13 @@
         margin-left: 25px;
         height: 15px;
     }
+
+
+    #Chemistry, #Physical, #Microstructure {
+        text-align: center;
+        width: 100%;
+    }
+
 }
 
 /**************************************
@@ -58,6 +68,8 @@
         column-rule-color: #4cff00;*/
         text-align: center;
         width: 100%;
+        margin: 0px;
+        
     }
 
 
@@ -81,20 +93,16 @@
     border-style: none;
     border-bottom-style: solid;
     border-bottom-color: #000;
-    width: 90px;
 }    
-    .txtent {
-    float: left;
-    width: 200px;
-}
     .rptlbl {
-    width: 100px;
+    width: 200px;
     height: 22px;
     float: left;
 }
     label {
         border-bottom-color: #AAAAAA;
         border-bottom-style: solid;
+        float: right;
 }
     p {
     line-break: strict;
@@ -108,6 +116,7 @@
     .rptlbl {
     width: 200px;
     height: 22px;
+    float: left;
 }
     label {
         border-bottom-color: #AAAAAA;
@@ -117,15 +126,5 @@
     input {
         border-style: solid;
 }
-
-    #Chemistry, #Physical, #Microstructure {
-        -webkit-column-count: 4; /* Safari and Chrome */
-        -moz-column-count: 4; /* Firefox */
-        column-count: 4;
-        -webkit-column-width: 120px; /* Safari and Chrome */
-        -moz-column-width: 120px; /* Firefox */
-        column-width: 120px;
-        text-align: center;
-    }
 
 }
