--- a/HeatSheet/css/stylesheet.css
+++ b/HeatSheet/css/stylesheet.css
@@ -1,4 +1,12 @@
 @media all {
+    .ctr {
+        width: 400px;
+        margin-left: auto ;
+        margin-right: auto ;
+}
+    .ctr input{
+    width: 200px;
+}
 	.dataent{
 	/*	column-count:3;
 	/*	-moz-column-count:3; /* Firefox */
@@ -18,12 +26,18 @@
 	}
 	
 	.txtent{
-    margin: 2px;
-    padding: 4px;
-    min-height: 30px;
+	    float: left;
+        height: 11px;
+        margin: 2px;
+        margin-left: 25px;
+        padding-left: 15px;
+        alignment-adjust: baseline;
+        padding: 4px;
+        min-height: 30px;
+        width: 250px;
 	}
 
-    .txtent input{
+    input{
 		float: right;
         height: 11px;
         margin: 2px;
@@ -31,7 +45,7 @@
         padding: 2px;
         padding-left: 15px;
         alignment-adjust: baseline;
-        width: 140px;
+        width: 100px;
 }
     .txtent p {
     margin: 2px;
@@ -133,9 +147,6 @@ body {
 
 .toolbarGlobal nav li ul li a:hover {color:#00796a;}
 
-li a {
-   
-}
 
 /**********************************************
     End of menu formatting
@@ -238,7 +249,7 @@ input {
 \*****************************************************************************/
 
 @media print {
-  .submit, footer, .lnks, .toolbarGlobal, ul {
+  .submit, footer, .lnks, #toolbarGlobal, ul {
   	visibility: hidden;
       height: 0px;
   }
@@ -260,6 +271,5 @@ input {
     border-bottom: solid;
   	
     }
-  
 }
   
